<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.franjo.presentation.presentation.MainActivity">

    <item
        android:id="@+id/actionWeb"
        android:icon="@drawable/ic_web"
        android:orderInCategory="2"
        android:title="@string/web"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionLogin"
        android:orderInCategory="2"
        android:title="@string/action_login"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionPrivateUser"
        android:icon="@drawable/ic_logged_in"
        android:orderInCategory="100"
        android:title="@string/action_private_user"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>