<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:cardCornerRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sort_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineSpacingExtra="3sp"
                android:text="@string/sort_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rb_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sort_title">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawablePadding="24dp"
                    android:duplicateParentState="false"
                    android:fontFamily="sans-serif"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sort_stars"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="locale"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_forks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawablePadding="24dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sort_forks"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="locale"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                    android:drawablePadding="24dp"
                    android:fontFamily="sans-serif"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sort_updates"
                    android:textColor="@color/colorPrimaryDark"
                    android:textDirection="locale"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
