<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.franjo.github.presentation.model.RepositoryUI" />

        <variable
            name="viewModelDetails"
            type="com.franjo.github.presentation.features.repository_details.RepositoryDetailsViewModel" />

        <variable
            name="iconListener"
            type="com.franjo.github.presentation.OnIconClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbnailPath="@{viewModelDetails.selectedRepo.thumbnail}"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCreatedAtLabel"
            app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModelDetails.selectedRepo.author.concat(@string/forward_slash).concat(viewModelDetails.selectedRepo.name)}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNameLabel"
            app:layout_constraintTop_toTopOf="@+id/tvNameLabel"
            tools:text="franjo/github" />

        <TextView
            android:id="@+id/tvCreatedAtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/created_at"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvLastUpdatedAtLabel"
            app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModelDetails.selectedRepo.createdAt}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCreatedAtLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCreatedAtLabel"
            app:layout_constraintTop_toTopOf="@+id/tvCreatedAtLabel"
            tools:text="2016/01/20" />

        <TextView
            android:id="@+id/tvLastUpdatedAtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/updated_at"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvProgrammingLanguageLabel"
            app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tvCreatedAtLabel" />

        <TextView
            android:id="@+id/tvLastUpdatedAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModelDetails.selectedRepo.updatedAt}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLastUpdatedAtLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvLastUpdatedAtLabel"
            app:layout_constraintTop_toTopOf="@+id/tvLastUpdatedAtLabel"
            tools:text="2020/02/20" />

        <TextView
            android:id="@+id/tvProgrammingLanguageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/programming_language"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivWatchers"
            app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tvLastUpdatedAtLabel" />

        <TextView
            android:id="@+id/tvProgrammingLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{viewModelDetails.selectedRepo.programmingLanguage}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvProgrammingLanguageLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvProgrammingLanguageLabel"
            app:layout_constraintTop_toTopOf="@+id/tvProgrammingLanguageLabel"
            tools:text="Kotlin" />

        <ImageView
            android:id="@+id/ivWatchers"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/tvWatcherCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ivThumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tvProgrammingLanguageLabel"
            app:srcCompat="@drawable/ic_watcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvWatcherCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{String.valueOf(viewModelDetails.selectedRepo.watcherCount)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivWatchers"
            app:layout_constraintStart_toEndOf="@+id/ivWatchers"
            app:layout_constraintTop_toTopOf="@+id/ivWatchers"
            tools:text="100" />

        <ImageView
            android:id="@+id/ivForks"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivStars"
            app:layout_constraintEnd_toStartOf="@+id/tvForksCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvStarsCount"
            app:layout_constraintTop_toTopOf="@+id/ivStars"
            app:srcCompat="@drawable/ic_fork"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvForksCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{String.valueOf(viewModelDetails.selectedRepo.forkCount)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivForks"
            app:layout_constraintStart_toEndOf="@+id/ivForks"
            app:layout_constraintTop_toTopOf="@+id/ivForks"
            tools:text="1200" />

        <ImageView
            android:id="@+id/ivIssues"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivForks"
            app:layout_constraintEnd_toStartOf="@+id/tvIssuesCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvForksCount"
            app:layout_constraintTop_toTopOf="@+id/ivForks"
            app:srcCompat="@drawable/ic_issue"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvIssuesCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{String.valueOf(viewModelDetails.selectedRepo.issuesCount)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivIssues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivIssues"
            app:layout_constraintTop_toTopOf="@+id/ivIssues"
            tools:text="50" />

        <ImageView
            android:id="@+id/ivStars"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivWatchers"
            app:layout_constraintEnd_toStartOf="@+id/tvStarsCount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvWatcherCount"
            app:layout_constraintTop_toTopOf="@+id/ivWatchers"
            app:srcCompat="@drawable/ic_star"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvStarsCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{String.valueOf(viewModelDetails.selectedRepo.starsCount)}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivStars"
            app:layout_constraintStart_toEndOf="@+id/ivStars"
            app:layout_constraintTop_toTopOf="@+id/ivStars"
            tools:text="323" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:tabBackground="@android:color/white"
            app:tabIndicatorColor="@color/colorPrimaryDark"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorPrimary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>